--- a/MduiBlazor.Server/Pages/_Host.cshtml
+++ b/MduiBlazor.Server/Pages/_Host.cshtml
@@ -12,11 +12,11 @@
     <base href="~/" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="css/site.css" />
-    <link rel="stylesheet" href="MduiBlazor.Server.styles.css" />
-    <link rel="stylesheet" href="_content/MduiBlazor/css/mdui.min.css" />
+    <link rel="stylesheet" href="_content/MduiBlazor/css/mdui.css" />
+    <link rel="stylesheet" href="_content/MduiBlazor.Shared/css/site.css" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
-<body class="mdui-theme-primary-deep-purple mdui-theme-accent-pink mdui-theme-layout-auto mdui-appbar-with-toolbar mdui-drawer-body-left mdui-drawer-body-right">
+<body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
 
     <div id="blazor-error-ui">
