--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -1,34 +1,39 @@
 ﻿@inherits LayoutComponentBase
 
-<MduiAppbar Fixed>
-    <MduiToolbar Color="@Color.Primary">
-        <MduiIconButton IconName="menu" OnClick="_=>open=!open" />
-        <MduiText Typo="@Typo.title">Title</MduiText>
-        <MduiToolbarSpace />
-        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        <MduiIconButton IconName="search" />
-        <MduiIconButton IconName="refresh" />
-        <MduiMenu>
-            <ActivatorContent>
-                <MduiIconButton IconName="more_vert" />
-            </ActivatorContent>
+<MduiLayout>
+    <MduiAppbar Fixed>
+        <MduiToolbar Color="@Color.Primary">
+            <MduiIconButton IconName="menu" OnClick="_=>open=!open" />
+            <MduiText Typo="@Typo.title">Title</MduiText>
+            <MduiToolbarSpace />
+            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <MduiIconButton IconName="search" />
+            <MduiIconButton IconName="refresh" />
+            <MduiMenu>
+                <ActivatorContent>
+                    <MduiIconButton IconName="more_vert" />
+                </ActivatorContent>
+                <ChildContent>
+                    <MduiMenuItem>Help & feedback</MduiMenuItem>
+                    <MduiMenuItem Disabled>Settings</MduiMenuItem>
+                    <MduiDivider />
+                    <MduiMenuItem>Sign out</MduiMenuItem>
+                </ChildContent>
+            </MduiMenu>
+        </MduiToolbar>
+    </MduiAppbar>
+    <MduiDrawer @bind-Opened="@open">
+        <NavMenu />
+    </MduiDrawer>
+
+    <main class="mdui-p-a-2">
+        <ErrorBoundary @ref="errorBoundary" Context="ex">
             <ChildContent>
-                <MduiMenuItem>Help & feedback</MduiMenuItem>
-                <MduiMenuItem Disabled>Settings</MduiMenuItem>
-                <MduiDivider />
-                <MduiMenuItem>Sign out</MduiMenuItem>
+                @Body
             </ChildContent>
-        </MduiMenu>
-    </MduiToolbar>
-</MduiAppbar>
-<MduiDrawer @bind-Opened="@open">
-    <NavMenu />
-</MduiDrawer>
-
-<main class="mdui-typo">
-    @Body
-</main>
-
-@code {
-    bool open;
-}
+            <ErrorContent>
+                <div class="blazor-error-boundary">@ex.Message</div>
+            </ErrorContent>
+        </ErrorBoundary>
+    </main>
+</MduiLayout>
