--- a/MduiBlazor/Components/Bar/MduiToolbar.razor
+++ b/MduiBlazor/Components/Bar/MduiToolbar.razor
@@ -1,5 +1,6 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
+@implements IDisposable
 
 <div class="@Classname" style="@Style">
     @ChildContent
