--- a/MduiBlazor/Components/Layout/MduiLayout.razor
+++ b/MduiBlazor/Components/Layout/MduiLayout.razor
@@ -1,8 +1,8 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<header class="@Classname" style="@Style">
+<div class="@Classname" style="@Style">
     <CascadingValue Value="@this" IsFixed>
         @ChildContent
     </CascadingValue>
-</header>
+</div>
