--- a/MduiBlazor/Components/Drawer/MduiDrawer.razor
+++ b/MduiBlazor/Components/Drawer/MduiDrawer.razor
@@ -4,4 +4,4 @@
 <div class="@Classname" style="@Style">
     @ChildContent
 </div>
-<MduiOverlay Visible="@(Overlay&&Opened)" OnBackgroundClick="@OnOverlayClicked" />
+<MduiOverlay Visible="@(_opened&&_variant==DrawerVariant.Temporary)" OnBackgroundClick="@OnOverlayClickedAsync" />
