--- a/MduiBlazor/Components/Bar/MduiAppbar.razor
+++ b/MduiBlazor/Components/Bar/MduiAppbar.razor
@@ -1,5 +1,6 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
+@implements IDisposable
 
 <header class="@Classname" style="@Style">
     <CascadingValue Value="@this" IsFixed>
