--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<MduiNavMenu>
-    <MduiNavMenuItem Href="/" Icon="home" Match="NavLinkMatch.All">Home</MduiNavMenuItem>
+    <MduiNavMenuItem Href="" Icon="home" Match="NavLinkMatch.All">Home</MduiNavMenuItem>
     <MduiNavMenuItem Href="bars" Icon="">Bars</MduiNavMenuItem>
     <MduiNavMenuItem Href="buttons" Icon="">Buttons</MduiNavMenuItem>
     <MduiNavMenuItem Href="counter" Icon="add">Counter</MduiNavMenuItem>
