--- a/MduiBlazor.Shared/Pages/FetchData.razor
+++ b/MduiBlazor.Shared/Pages/FetchData.razor
@@ -13,7 +13,7 @@
 }
 else
 {
-    <table class="table">
+    <MduiTable Hoverable>
         <thead>
             <tr>
                 <th>Date</th>
@@ -33,7 +33,7 @@ else
                 </tr>
             }
         </tbody>
-    </table>
+    </MduiTable>
 }
 
 @code {
