--- a/MduiBlazor.Server/Pages/_Host.cshtml
+++ b/MduiBlazor.Server/Pages/_Host.cshtml
@@ -31,6 +31,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    <script src="_content/MduiBlazor/js/mdui.min.js"></script>
+    <script src="_content/MduiBlazor/js/mdui.js"></script>
 </body>
 </html>
