--- a/MduiBlazor.Shared/Pages/Bars.razor
+++ b/MduiBlazor.Shared/Pages/Bars.razor
@@ -1,7 +1,7 @@
 ﻿@page "/bars"
 
 <h2>Toolbar</h2>
-<MduiToolbar Color="@Color.Primary">
+<MduiToolbar Color="@Colors.Theme.Primary">
     <MduiIconButton IconName="menu" />
     <MduiText Typo="@Typo.title">Title</MduiText>
     <MduiToolbarSpace />
