--- a/MduiBlazor.Shared/Pages/Buttons.razor
+++ b/MduiBlazor.Shared/Pages/Buttons.razor
@@ -1,10 +1,10 @@
 ﻿@page "/buttons"
 
 <h2>Button</h2>
-<MduiButton Color="@Color.Primary">Button</MduiButton>
+<MduiButton Color="@Colors.Theme.Primary">Button</MduiButton>
 
 <h2>IconButton</h2>
-<MduiIconButton Color="@Color.Accent" IconName="add" />
+<MduiIconButton Color="@Colors.Theme.Accent" IconName="add" />
 
 <h2>ButtonGroup</h2>
 <MduiButtonGroup>
@@ -23,11 +23,11 @@
 </MduiButtonGroup>
 
 <h2>FabButton</h2>
-<MduiFabButton IconName="add" Color="@Color.Accent" />
+<MduiFabButton IconName="add" Color="@Colors.Theme.Accent" />
 
-<MduiFabMenu IconName="add" OpenedIconName="edit" Color="@Color.Accent">
-    <MduiFabButton IconName="backup" Color="@Color.Primary" Mini />
-    <MduiFabButton IconName="bookmark" Color="@Color.Accent" Mini />
-    <MduiFabButton IconName="access_alarms" Color="@Color.Info" Mini />
-    <MduiFabButton IconName="touch_app" Color="@Color.Success" Mini />
+<MduiFabMenu IconName="add" OpenedIconName="edit" Color="@Colors.Theme.Accent">
+    <MduiFabButton IconName="backup" Color="@Colors.Theme.Primary" Mini />
+    <MduiFabButton IconName="bookmark" Color="@Colors.Theme.Accent" Mini />
+    <MduiFabButton IconName="access_alarms" Color="@Colors.Blue.Primary" Mini />
+    <MduiFabButton IconName="touch_app" Color="@Colors.Green.Primary" Mini />
 </MduiFabMenu>
