--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -2,11 +2,11 @@
 
 <MduiLayout>
     <MduiAppbar Fixed>
-        <MduiToolbar Color="@Color.Primary">
+        <MduiToolbar Color="@Colors.Theme.Primary">
             <MduiIconButton IconName="menu" OnClick="_=>open=!open" />
             <MduiText Typo="@Typo.title">Title</MduiText>
             <MduiToolbarSpace />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://github.com/gaofen13/mdui-blazor" target="_blank">About</a>
             <MduiIconButton IconName="search" />
             <MduiIconButton IconName="refresh" />
             <MduiMenu>
