--- a/MduiBlazor.Shared/Pages/Counter.razor
+++ b/MduiBlazor.Shared/Pages/Counter.razor
@@ -6,7 +6,7 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<MduiButton Color="Color.Primary" OnClick="IncrementCount">Click me</MduiButton>
+<MduiButton Color="@Colors.Theme.Primary" OnClick="IncrementCount">Click me</MduiButton>
 
 @code {
     private int currentCount = 0;
