--- a/MduiBlazor/Components/Bar/MduiToolbar.razor
+++ b/MduiBlazor/Components/Bar/MduiToolbar.razor
@@ -2,6 +2,6 @@
 @inherits MduiComponentBase
 @implements IDisposable
 
-<div class="@Classname" style="@Style">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @ChildContent
 </div>
