--- a/MduiBlazor/Components/Divider/MduiDivider.razor
+++ b/MduiBlazor/Components/Divider/MduiDivider.razor
@@ -1,4 +1,4 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style"></div>
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes"></div>
