--- a/MduiBlazor/Components/Menu/MduiMenuItem.razor
+++ b/MduiBlazor/Components/Menu/MduiMenuItem.razor
@@ -1,7 +1,7 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<li class="@Classname" style="@Style" disabled="@Disabled">
+<li class="@Classname" style="@Style" disabled="@Disabled" @attributes="@AdditionalAttributes">
     <a>
         @ChildContent
     </a>
