--- a/MduiBlazor/Components/Typography/MduiText.razor
+++ b/MduiBlazor/Components/Typography/MduiText.razor
@@ -1,4 +1,4 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<span class="@Classname" style="@Style">@ChildContent</span>
+<span class="@Classname" style="@Style" @attributes="@AdditionalAttributes">@ChildContent</span>
