--- a/MduiBlazor/Components/Bar/MduiToolbarSpace.razor
+++ b/MduiBlazor/Components/Bar/MduiToolbarSpace.razor
@@ -1,4 +1,4 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="mdui-toolbar-spacer"></div>
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes"></div>
