--- a/MduiBlazor/Components/Button/MduiFabButton.razor
+++ b/MduiBlazor/Components/Button/MduiFabButton.razor
@@ -1,6 +1,6 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<button class="@Classname" style="@Style">
+<button class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <MduiIcon Name="@IconName" Color="@IconColor" />
 </button>
