--- a/MduiBlazor/Components/Button/MduiIconButton.razor
+++ b/MduiBlazor/Components/Button/MduiIconButton.razor
@@ -2,18 +2,19 @@
 @inherits MduiButtonBase
 
 <MduiButton Class="@Classname"
-                Style="@Style"
-                ButtonType="@ButtonType"
-                Color="@Color"
-                Dense="@Dense"
-                Disabled="@Disabled"
-                Href="@Href"
-                Target="@Target"
-                HtmlTag="@HtmlTag"
-                Ripple="@Ripple"
-                Text="@true"
-                OnClick="@OnClick"
-                Command="@Command"
-                CommandParameter="@CommandParameter">
+            Style="@Style"
+            @attributes="@AdditionalAttributes"
+            ButtonType="@ButtonType"
+            Color="@Color"
+            Dense="@Dense"
+            Disabled="@Disabled"
+            Href="@Href"
+            Target="@Target"
+            HtmlTag="@HtmlTag"
+            Ripple="@Ripple"
+            Text="@true"
+            OnClick="@OnClick"
+            Command="@Command"
+            CommandParameter="@CommandParameter">
     <MduiIcon Name="@IconName" Color="@IconColor" />
 </MduiButton>
