--- a/MduiBlazor/Components/Drawer/MduiDrawer.razor
+++ b/MduiBlazor/Components/Drawer/MduiDrawer.razor
@@ -1,7 +1,7 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @ChildContent
 </div>
 <MduiOverlay Visible="@(_opened&&_variant==DrawerVariant.Temporary)" OnBackgroundClick="@OnOverlayClickedAsync" />
