--- a/MduiBlazor/Components/List/MduiList.razor
+++ b/MduiBlazor/Components/List/MduiList.razor
@@ -1,6 +1,6 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @ChildContent
 </div>
