--- a/MduiBlazor/Components/Menu/MduiMenu.razor
+++ b/MduiBlazor/Components/Menu/MduiMenu.razor
@@ -1,16 +1,18 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-@if (ActivatorContent != null)
-{
-    <label mdui-menu="@Options">
-        @ActivatorContent
-    </label>
-}
-else
-{
-    <MduiButton mdui-menu="@Options">@Title</MduiButton>
-}
-<ul id="@id" class="@Classname" style="@Style">
-    @ChildContent
-</ul>
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
+    @if (ActivatorContent != null)
+    {
+        <label mdui-menu="@Options">
+            @ActivatorContent
+        </label>
+    }
+    else
+    {
+        <MduiButton mdui-menu="@Options">@Title</MduiButton>
+    }
+    <ul id="@id" class="mdui-menu">
+        @ChildContent
+    </ul>
+</div>
