--- a/MduiBlazor/Components/NavMenu/MduiNavMenuSubheader.razor
+++ b/MduiBlazor/Components/NavMenu/MduiNavMenuSubheader.razor
@@ -1,9 +1,4 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="mdui-subheader@(Inset?"-inset":"")">@ChildContent</div>
-
-@code {
-    [Parameter]
-    public bool Inset { get; set; }
-}
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">@ChildContent</div>
