--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -22,7 +22,7 @@
             </MduiMenu>
         </MduiToolbar>
     </MduiAppbar>
-    <MduiDrawer @bind-Opened="@open" Variant="@DrawerVariant.Responsive">
+    <MduiDrawer @bind-Opened="@open">
         <NavMenu />
     </MduiDrawer>
 
