--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -4,5 +4,6 @@
     <MduiNavMenuItem Href="buttons" Icon="">Buttons</MduiNavMenuItem>
     <MduiNavMenuItem Href="counter" Icon="add">Counter</MduiNavMenuItem>
     <MduiNavMenuItem Href="fetchdata">Fetch data</MduiNavMenuItem>
+    <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
     <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
 </MduiNavMenu>
