--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -13402,36 +13402,36 @@ select.mdui-select[multiple] option:last-child {
  */
 /* 菜单 */
 .mdui-menu {
-  position: fixed;
-  z-index: 99999;
-  display: block;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 168px;
-  margin: 0;
-  padding: 8px 0;
-  overflow-y: auto;
-  color: rgba(0, 0, 0, 0.87);
-  font-size: 16px;
-  list-style: none;
-  background-color: #fff;
-  border-radius: 2px;
-  -webkit-transform: scale(0);
-          transform: scale(0);
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  -webkit-transition-duration: 0.3s;
-          transition-duration: 0.3s;
-  -webkit-transition-property: opacity, visibility, -webkit-transform;
-  transition-property: opacity, visibility, -webkit-transform;
-  transition-property: transform, opacity, visibility;
-  transition-property: transform, opacity, visibility, -webkit-transform;
-  will-change: transform, opacity, visibility;
-  -webkit-overflow-scrolling: touch;
-  -webkit-box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    position: fixed;
+    z-index: 99999;
+    display: block;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 168px;
+    margin: 0;
+    padding: 8px 0 !important;
+    overflow-y: auto;
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 16px;
+    list-style: none;
+    background-color: #fff;
+    border-radius: 2px;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: opacity, visibility, -webkit-transform;
+    transition-property: opacity, visibility, -webkit-transform;
+    transition-property: transform, opacity, visibility;
+    transition-property: transform, opacity, visibility, -webkit-transform;
+    will-change: transform, opacity, visibility;
+    -webkit-overflow-scrolling: touch;
+    -webkit-box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 .mdui-menu .mdui-divider {
   margin-top: 8px;
