--- a/MduiBlazor.Shared/Pages/Bars.razor
+++ b/MduiBlazor.Shared/Pages/Bars.razor
@@ -2,11 +2,11 @@
 
 <h2>Toolbar</h2>
 <MduiToolbar Color="@Colors.Theme.Primary">
-    <MduiIconButton IconName="menu" />
+    <MduiIconButton Icon="menu" />
     <MduiText Typo="@Typo.title">Title</MduiText>
     <MduiToolbarSpace />
-    <MduiIconButton IconName="search" />
-    <MduiIconButton IconName="refresh" />
+    <MduiIconButton Icon="search" />
+    <MduiIconButton Icon="refresh" />
         <MduiMenu Title="Menu">
             <ChildContent>
                 <MduiMenuItem>Help & feedback</MduiMenuItem>
