--- a/MduiBlazor.Shared/Pages/Buttons.razor
+++ b/MduiBlazor.Shared/Pages/Buttons.razor
@@ -4,7 +4,7 @@
 <MduiButton Color="@Colors.Theme.Primary">Button</MduiButton>
 
 <h2>IconButton</h2>
-<MduiIconButton Color="@Colors.Theme.Accent" IconName="add" />
+<MduiIconButton Color="@Colors.Theme.Accent" Icon="add" />
 
 <h2>ButtonGroup</h2>
 <MduiButtonGroup>
@@ -23,11 +23,11 @@
 </MduiButtonGroup>
 
 <h2>FabButton</h2>
-<MduiFabButton IconName="add" Color="@Colors.Theme.Accent" />
+<MduiFab Icon="add" Color="@Colors.Theme.Accent" />
 
-<MduiFabMenu IconName="add" OpenedIconName="edit" Color="@Colors.Theme.Accent">
-    <MduiFabButton IconName="backup" Color="@Colors.Theme.Primary" Mini />
-    <MduiFabButton IconName="bookmark" Color="@Colors.Theme.Accent" Mini />
-    <MduiFabButton IconName="access_alarms" Color="@Colors.Blue.Primary" Mini />
-    <MduiFabButton IconName="touch_app" Color="@Colors.Green.Primary" Mini />
+<MduiFabMenu Icon="add" OpenedIcon="edit" Color="@Colors.Theme.Accent">
+    <MduiFab Icon="backup" Color="@Colors.Theme.Primary" Mini />
+    <MduiFab Icon="bookmark" Color="@Colors.Theme.Accent" Mini />
+    <MduiFab Icon="access_alarms" Color="@Colors.Blue.Primary" Mini />
+    <MduiFab Icon="touch_app" Color="@Colors.Green.Primary" Mini />
 </MduiFabMenu>
