--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -3,15 +3,15 @@
 <MduiLayout UseMduiTypo>
     <MduiAppbar Fixed>
         <MduiToolbar Color="@Colors.Theme.Primary">
-            <MduiIconButton IconName="menu" OnClick="_=>open=!open" />
+            <MduiIconButton Icon="menu" OnClick="_=>open=!open" />
             <MduiText Typo="@Typo.title">Title</MduiText>
             <MduiToolbarSpace />
             <a href="https://github.com/gaofen13/mdui-blazor" target="_blank">About</a>
-            <MduiIconButton IconName="search" />
-            <MduiIconButton IconName="refresh" />
+            <MduiIconButton Icon="search" />
+            <MduiIconButton Icon="refresh" />
             <MduiMenu>
                 <ActivatorContent>
-                    <MduiIconButton IconName="more_vert" />
+                    <MduiIconButton Icon="more_vert" />
                 </ActivatorContent>
                 <ChildContent>
                     <MduiMenuItem>Help & feedback</MduiMenuItem>
