--- a/MduiBlazor/Components/Button/MduiIconButton.razor
+++ b/MduiBlazor/Components/Button/MduiIconButton.razor
@@ -16,5 +16,5 @@
             OnClick="@OnClick"
             Command="@Command"
             CommandParameter="@CommandParameter">
-    <MduiIcon Name="@IconName" Color="@IconColor" />
+    <MduiIcon Name="@Icon" Color="@IconColor" />
 </MduiButton>
