--- a/MduiBlazor/Components/Button/MduiFabMenu.razor
+++ b/MduiBlazor/Components/Button/MduiFabMenu.razor
@@ -2,7 +2,7 @@
 @inherits MduiComponentBase
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    <MduiFabButton Class="@FabBtnClassname" Color="@Color" IconName="@FabIconName" IconColor="@IconColor"
+    <MduiFab Class="@FabBtnClassname" Color="@Color" Icon="@FabIcon" IconColor="@IconColor"
         IconClass="@FabIconClassname" OnClick="@OnClickFabBtn" />
     <div class="@DialClassname" style="@DialStyle">
         @ChildContent
