--- a/MduiBlazor.Shared/Pages/Buttons.razor
+++ b/MduiBlazor.Shared/Pages/Buttons.razor
@@ -23,7 +23,8 @@
 </MduiButtonGroup>
 
 <h2>FabButton</h2>
-<MduiFab Icon="add" Color="@Colors.Theme.Accent" />
+<MduiButton Color="@Colors.Theme.Accent" OnClick="@(_=>hide=!hide)">@(hide?"显示":"隐藏")</MduiButton>
+<MduiFab Hide="@hide" Icon="add" Color="@Colors.Theme.Accent" />
 
 <MduiFabMenu Icon="add" OpenedIcon="edit" Color="@Colors.Theme.Accent">
     <MduiFab Icon="backup" Color="@Colors.Theme.Primary" Mini />
@@ -31,3 +32,7 @@
     <MduiFab Icon="access_alarms" Color="@Colors.Blue.Primary" Mini />
     <MduiFab Icon="touch_app" Color="@Colors.Green.Primary" Mini />
 </MduiFabMenu>
+
+@code {
+    bool hide;
+}
