--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
             <MduiToolbarSpace />
             <a href="https://github.com/gaofen13/mdui-blazor" target="_blank">About</a>
             <MduiIconButton Icon="search" />
-            <MduiIconButton Icon="refresh" />
+            <MduiIconButton Icon="refresh" OnClick="@ReflashPage" />
             <MduiMenu>
                 <ActivatorContent>
                     <MduiIconButton Icon="more_vert" />
