--- a/MduiBlazor/Components/Input/MduiTextField.razor
+++ b/MduiBlazor/Components/Input/MduiTextField.razor
@@ -4,37 +4,19 @@
 <MduiField Class="@FieldClassname" Label="@Label" Icon="@Icon" HelperText="@HelperText" ErrorText="@ErrorText">
     @if (Rows > 1)
     {
-        <textarea @ref="@Element"
-              class="@Classname"
-              style="@Style"
-              rows="@Rows"
-              required="@Required"
-              pattern="@Pattern"
-              maxlength="@MaxLength"
-              placeholder="@Placeholder"
-              disabled="@Disabled"
-              readonly="@Readonly"
-              @attributes="@AdditionalAttributes"
-              value="@BindConverter.FormatValue(CurrentValueAsString)"
-              @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
-              @oninput="@OnTextInput" />
+        <textarea @ref="@Element" class="@Classname" style="@Style" rows="@Rows" required="@Required" pattern="@Pattern"
+        maxlength="@MaxLength" placeholder="@Placeholder" disabled="@Disabled" readonly="@Readonly"
+        @attributes="@AdditionalAttributes" value="@BindConverter.FormatValue(CurrentValueAsString)"
+        @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
+        @onfocus="@OnFocus" @onblur="@OnBlur" @oninput="@OnTextInput" />
     }
     else
     {
-        <input @ref="@Element"
-           class="@Classname"
-           style="@Style"
-           type="@Type"
-           required="@Required"
-           pattern="@Pattern"
-           maxlength="@MaxLength"
-           placeholder="@Placeholder"
-           disabled="@Disabled"
-           readonly="@Readonly"
-           @attributes="@AdditionalAttributes"
-           value="@BindConverter.FormatValue(CurrentValueAsString)"
-           @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
-           @oninput="@OnTextInput" />
+        <input @ref="@Element" class="@Classname" style="@Style" type="@Type" required="@Required" pattern="@Pattern"
+        maxlength="@MaxLength" placeholder="@Placeholder" disabled="@Disabled" readonly="@Readonly"
+        @attributes="@AdditionalAttributes" value="@BindConverter.FormatValue(CurrentValueAsString)"
+        @onchange="@(EventCallback.Factory.CreateBinder<string?>(this, __value => CurrentValueAsString = __value, CurrentValueAsString))"
+        @onfocus="@OnFocus" @onblur="@OnBlur" @oninput="@OnTextInput" />
     }
     @if (MaxLength > 0 && MaxLength <= int.MaxValue)
     {
